// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: create without instance 1`] = `
<DocumentFragment>
  <mock-customizedactionbutton
    ariadescription="Open add a failure instance panel"
    arialabel="Add a failure instance"
    iconprops="[object Object]"
  >
    Add a failure instance
  </mock-customizedactionbutton>
  <mock-genericpanel
    classname="failureInstancePanel"
    closebuttonarialabel="Close failure instance panel"
    hasclosebutton="true"
    headertext="Add a failure instance"
    isopen="false"
  >
    <mock-flaggedcomponent
      enablejsxelement="[object Object]"
      featureflag="manualInstanceDetails"
      featureflagstoredata="[object Object]"
    />
    <mock-styledtextfieldbase
      classname="observedFailureTextfield"
      label="Comment"
      multiline="true"
      placeholder="Comment"
      resizable="false"
      rows="8"
      value=""
    />
    <div>
      <mock-actionandcancelbuttonscomponent
        ishidden="false"
        primarybuttondisabled="true"
        primarybuttontext="Add failed instance"
      />
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: edit without instance 1`] = `
<DocumentFragment>
  <mock-styledlinkbase
    classname="editButton"
  />
  <mock-genericpanel
    classname="failureInstancePanel"
    closebuttonarialabel="Close failure instance panel"
    hasclosebutton="true"
    headertext="Edit failure instance"
    isopen="false"
  >
    <mock-flaggedcomponent
      enablejsxelement="[object Object]"
      featureflag="manualInstanceDetails"
      featureflagstoredata="[object Object]"
    />
    <mock-styledtextfieldbase
      classname="observedFailureTextfield"
      label="Comment"
      multiline="true"
      placeholder="Comment"
      resizable="false"
      rows="8"
      value=""
    />
    <div>
      <mock-actionandcancelbuttonscomponent
        ishidden="false"
        primarybuttondisabled="true"
        primarybuttontext="Save"
      />
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;

exports[`FailureInstancePanelControlTest render FailureInstancePanelControl: partial original instance 1`] = `
<DocumentFragment>
  <mock-customizedactionbutton
    ariadescription="Open add a failure instance panel"
    arialabel="Add a failure instance"
    iconprops="[object Object]"
  >
    Add a failure instance
  </mock-customizedactionbutton>
  <mock-genericpanel
    classname="failureInstancePanel"
    closebuttonarialabel="Close failure instance panel"
    hasclosebutton="true"
    headertext="Add a failure instance"
    isopen="false"
  >
    <mock-flaggedcomponent
      enablejsxelement="[object Object]"
      featureflag="manualInstanceDetails"
    />
    <mock-styledtextfieldbase
      classname="observedFailureTextfield"
      label="Comment"
      multiline="true"
      placeholder="Comment"
      resizable="false"
      rows="8"
      value="original text"
    />
    <div>
      <mock-actionandcancelbuttonscomponent
        ishidden="false"
        primarybuttondisabled="false"
        primarybuttontext="Add failed instance"
      />
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;
